--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,18 @@ main h1 {
 .btn:hover {
   background-color: rgb(221, 134, 34);
 }
+
+@media (max-width: 48rem) {
+  #main-header nav {
+    display: none;
+  }
+
+  main h1 {
+    font-size: 1.5rem;
+  }
+
+  #latest-products ul {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
