--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,21 @@ a {
   text-transform: uppercase;
 }
 
+.menu-btn {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.menu-btn span {
+  gap: 30px;
+  width: 100%;
+  height: 3px;
+  background-color: white;
+}
+
 #main-header ul {
   list-style: none;
   display: flex;
