--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  display: none;
 }
 
 .menu-btn span {
@@ -61,6 +62,47 @@ a {
   color: rgb(228, 163, 44);
 }
 
+/* Side drawer */
+
+#side-drawer {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(29, 26, 27);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#side-drawer:target {
+  display: block;
+}
+
+#side-drawer header {
+  height: 5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 5%;
+}
+
+#side-drawer ul {
+  list-style: none;
+  margin: 0;
+  padding: 4rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#side-drawer li {
+  margin: 1rem 0;
+}
+
+#side-drawer a {
+  color: rgb(253, 239, 213);
+  font-size: 2rem;
+}
 /* Main */
 
 main h1 {
@@ -89,6 +131,10 @@ main h1 {
   overflow: hidden;
 }
 
+.food-item h2 {
+  margin: 0 0 1rem 0;
+}
+
 .food-item img {
   height: 15rem;
   width: 100%;
@@ -114,6 +160,10 @@ main h1 {
 @media (max-width: 48rem) {
   #main-header nav {
     display: none;
+  }
+
+  .menu-btn {
+    display: flex;
   }
 
   main h1 {
